Cambios y Validaciones en perfil de cliente

--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.css
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.css
@@ -47,3 +47,12 @@
     color:red;
     font-size: 12px;
 }
+
+p,
+label {
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input {
+    margin: .4rem;
+}
