--- a/backend/assets/templates/envioCorreo.html
+++ b/backend/assets/templates/envioCorreo.html
@@ -4,10 +4,10 @@
          <div class = 'center'> 
                 <h3>{{razonSocial}} Gracias por contratar nuestros servicios</h3> 
                 <p>
-                    En el siguiente enlace puede acceder a la plataforma para comenzar con el sistema:<br><br>
+                    En el siguiente enlace puede acceder a la plataforma para crear su cuenta de usuario:<br><br>
                     
-                    Link: http://localhost:4200/create-cuenta<br>
-                    Código de verificación: {{token}}
+                    <strong>Link:</strong> https://raochoa.pythonanywhere.com/create-cuenta<br>
+                    <strong>Código de verificación:</strong> {{token}}
 
                 </p>       
          </div>
