--- a/backend/assets/templates/envioCorreoAdmin.html
+++ b/backend/assets/templates/envioCorreoAdmin.html
@@ -7,12 +7,15 @@
                     Datos personales de contacto:
                 </p>       
                 <p>
-                   -{{razonsocial}}
+                   <strong>Razón Social: </strong>{{razonSocial}}
                 </p>
                 <p>
-                    -{{mail}}
+                    <strong>Email: </strong>{{mail}}
                 </p>
-                    -{{telefono}} 
+                    <strong>Télefono: </strong>{{telefono}} 
+                <p>
+                </p>
+                    <strong>Mensaje:</strong><br>{{msg}} 
                 <p>
          </div>
     </body>
