--- a/backend/assets/templates/password_reset.html
+++ b/backend/assets/templates/password_reset.html
@@ -9,9 +9,9 @@
                     con nosotros.<br><br>
 
                     En el siguiente enlace puede cambiar la contraseña de su cuenta:<br>
-                    Link: http://localhost:4200/create-cuenta/?token={{token}}<br><br>
+                    Link: https://raochoa.pythonanywhere.com/restablecer-password/<br><br>
 
-                    O puede ingresarla manualmente el siguiente código de verificación:<br>
+                    Se le pedirá un código de verificación:<br>
                     <strong>Código:</strong> {{token}}
 
                 </p>       
