Correcciones en los input de las contraseñas de los formularios y se agregó una barra de carga para la espera de respuestas de las peticiones.

--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -4,14 +4,16 @@
         <div id="title">
             <h1>Cambiar Contraseña</h1>
         </div>
-        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword">
+        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"(ngSubmit)="actualizar(changePassword.value)">
             <div class="row mb-3" id="formulario">
                 <div id="campos">
                     <div class="col-md-5 mt-4 mb-4 w-50">
                         <div class="form-floating">
                             <input class="form-control" id="inputActualPassword" name="actualPassword" type="password"
-                                placeholder="Ingrese su contraseña" formControlName='actualpassword'>
+                                placeholder="Ingrese su contraseña" formControlName='actual_password'>
                             <label for="inputActualPassword">Contraseña Actual</label>
+                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('actual_password')?.hasError('required')) || changePassword.get('actual_password')?.hasError('minlength')">
+                                Ingrese una contraseña que valida</span>
                         </div>
                     </div>
                     <div class="col-md-5 mb-4 w-50">
@@ -33,11 +35,13 @@
                             <input class="form-control" id="inputConfPassword" name="confPassword" type="password"
                             placeholder="Ingresa nuevamente su nueva contraseña" formControlName='confpassword'>
                             <label for="inputEmail">Confirmar Contraseña</label>
-                            <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span>
+                            <!-- <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span> -->
+                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('confpassword')?.hasError('required')) || changePassword.get('confpassword')?.hasError('pattern') || validacionPassword()">
+                                Las contraseñas no coinciden</span>
                         </div>
                     </div>
                     <div class="col-md-5 mb-4 w-50 text-center">
-                        <input value="Actualizar" [disabled]="formRef.control.invalid" class="btn btn-primary btn-block w-75">
+                        <input type="submit" value="Actualizar" [disabled]="formRef.invalid || validacionPassword()" class="btn btn-primary btn-block w-75">
                     </div>
                 </div>
             </div>
