--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
@@ -36,10 +36,10 @@
                                         </div>
                                     </form>
                                     <form #form2 [formGroup]="restablecerPassword" autocomplete="off" novalidate
-                                    #formRef2="ngForm">
+                                    #formRef2="ngForm" (ngSubmit)="enviar(password.value)">
                                         <div class="col-md-8 mb-3">
                                             <div class="form-floating">
-                                                <input class="form-control" id="inputPassword" name="password"
+                                                <input #password class="form-control" id="inputPassword" name="password"
                                                     type="password" placeholder="Ingrese su contraseña"
                                                     formControlName="password">
                                                 <label for="inputPassword">Contraseña</label>
