--- a/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
@@ -19,7 +19,7 @@
 
 #formulario{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     margin-left: 10px;
     margin-right: 10px;
 }
