--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
@@ -38,10 +38,10 @@
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputEmail" name="mailorganizacion"
                                                         type="email" placeholder="name@example.com"
-                                                        formControlName="email">
+                                                        formControlName="correo">
                                                     <label for="inputEmail">Correo Electrónico Organización</label>
                                                     <span class="lead error"
-                                                        *ngIf="(createAccount.get('empresa.email')?.hasError('minlength') ||  createAccount.get('empresa.email')?.hasError('pattern'))">Ingrese
+                                                        *ngIf="(formRef.submitted && createAccount.get('empresa.correo')?.hasError('required') ) || createAccount.get('empresa.correo')?.hasError('minlength') ||  createAccount.get('empresa.correo')?.hasError('pattern')">Ingrese
                                                         email válido</span>
 
                                                 </div>
@@ -76,8 +76,12 @@
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputDireccion" name="direccion"
                                                         type="text" placeholder="Ingrese su dirección"
-                                                        formControlName='direccion'>
+                                                        formControlName='direccion' maxlength="30">
                                                     <label for="inputDireccion">Dirección</label>
+                                                    <span class="lead error"
+                                                        *ngIf="(formRef.submitted && createAccount.get('empresa.direccion')?.hasError('required')) || createAccount.get('empresa.direccion')?.hasError('minlength') || createAccount.get('empresa.direccion')?.hasError('pattern')">Ingrese
+                                                        una
+                                                        dirección valida</span>
                                                 </div>
                                             </div>
 
@@ -115,7 +119,7 @@
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputPassword" name="password"
-                                                        type="text" placeholder="Ingrese su contraseña"
+                                                        type="password" placeholder="Ingrese su contraseña"
                                                         formControlName="password">
                                                     <label for="inputPassword">Contraseña</label>
                                                     <span class="lead error"
@@ -148,13 +152,8 @@
                                                         placeholder="Ingrese su contraseña nuevamente"
                                                         formControlName="confpassword">
                                                     <label for="inputvalidatePassword">Valide su contraseña</label>
-                                                    <span class="lead error" *ngIf="validacionPassword()">
-                                                        Ingrese una contraseña que contenga:<br>
-                                                        ◆ Al menos 1 Minuscula<br>
-                                                        ◆ Al menos 1 Mayúscula<br>
-                                                        ◆ Al menos 1 Numero<br>
-                                                        ◆ Al menos 1 Caracter especial<br>
-                                                        ◆ Mínimo 8 caracteres
+                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('user.confpassword')?.hasError('required')) || createAccount.get('user.confpassword')?.hasError('pattern') || validacionPassword()">
+                                                        La contraseña no coincide
                                                     </span>
                                                 </div>
                                             </div>
@@ -174,10 +173,11 @@
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputCargo" name="cargo" type="text"
-                                                        placeholder="Enter your cargo" formControlName="cargoEmpres">
+                                                        placeholder="Enter your cargo" formControlName="cargoEmpres"
+                                                        maxlength="50">
                                                     <label for="inputCargo">Cargo Contacto</label>
                                                     <span class="lead error"
-                                                        *ngIf="(formRef.submitted && createAccount.get('cargoEmpres')?.hasError('required')) || createAccount.get('cargoEmpres')?.hasError('pattern') || createAccount.get('cargoEmpres')?.hasError('minlength') || createAccount.get('cargoEmpres')?.hasError('maxlength')">Ingrese
+                                                        *ngIf="(formRef.submitted && createAccount.get('cargoEmpres')?.hasError('required')) || createAccount.get('cargoEmpres')?.hasError('pattern') || createAccount.get('cargoEmpres')?.hasError('minlength')">Ingrese
                                                         cargo válido</span>
                                                 </div>
                                             </div>
@@ -200,17 +200,24 @@
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputDireccionUser" name="direccion"
                                                         type="text" placeholder="Ingrese su dirección"
-                                                        formControlName="direccion">
+                                                        formControlName="direccion" maxlength="50">
                                                     <label for="inputDireccionUser">Dirección</label>
+                                                    <span class="lead error"
+                                                        *ngIf="(formRef.submitted && createAccount.get('direccion')?.hasError('required')) || createAccount.get('direccion')?.hasError('minlength') || createAccount.get('direccion')?.hasError('pattern')">Ingrese
+                                                        una
+                                                        dirección valida</span>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="mt-4 mb-0">
+                                        <div class="mt-4 mb-4">
                                             <div class="d-grid">
-                                                <input type="submit" value="Siguiente"
-                                                    [disabled]="formRef.control.invalid"
-                                                    class="btn btn-primary btn-block">
+                                                <input id="submit_create_cuenta" type="submit" value="Siguiente"
+                                                    [disabled]="formRef.invalid || validacionPassword()" class="btn btn-primary btn-block">
                                             </div>
+                                        </div>
+                                        <div *ngIf="loanding" class="w-100">
+                                            <mat-progress-spinner class="mx-auto" [color]="color" [mode]="mode">
+                                            </mat-progress-spinner>
                                         </div>
                                     </form>
                                 </div>
