--- a/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
+++ b/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
@@ -2,18 +2,24 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky">
             <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="vista-empresa">
+                <!-- <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="">
                         <span data-feather="admin"></span>
                         Perfil
                     </a>
+                </li> -->
+                <li class="nav-item" *ngIf="permissions.includes('change_user')">
+                    <a class="nav-link active" aria-current="page" routerLink="cambiar_contrasenia">
+                        <span data-feather="cambiar_contraseña"></span>
+                        Cambiar Contraseña
+                    </a>
                 </li>
-                <li *ngIf="permissions.includes('view_empresa')" class="nav-item">
+                <!-- <li *ngIf="permissions.includes('view_empresa')" class="nav-item">
                     <a class="nav-link" routerLink="empresas">
                         <span data-feather="empresas"></span>
                         Empresas
                     </a>
-                </li>
+                </li> -->
 
                 <li *ngIf="permissions.includes('view_empresatemp')" class="nav-item">
                     <a class="nav-link" routerLink="empresasTemp">
