Cambios Responsives en diferentes secciones del sistema

--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
@@ -1,8 +1,8 @@
 <div id="container">
-    <div id="perfil">
+    <div id="perfil" class="w-100">
         <div id="caja"></div>
-        <div id="title">
-            <h1>Perfil</h1>
+        <div>
+            <h1 id="title" class="text-center mt-5 mb-4">Perfil</h1>
         </div>
         <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]='profile'>
             <div class="row mb-3" id="formulario">
