--- a/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.css
@@ -1,11 +1,19 @@
-h2{
-    margin-left: 20px;
-}
-
 #container{
     display: flex;
     flex-direction: row;
 }
+
+#caja{
+    display: flex;
+    background-color: black;
+    height: 120px;
+    border-bottom-right-radius: 18% 75%;
+}
+
+#title{
+    font-weight: bold;
+}
+
 #tabla{
     display: flex;
     flex-direction: column;
