--- a/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div id="tabla" class="table-responsive">
-        
-        <h2>Permisos y Grupos</h2>
+        <div id="caja"></div>
+        <h1 id="title" class="text-center font-weight-bold mt-5">Permisos y Grupos</h1>
         <div>
             <button (click) = "crearUser()" class="btn btn-primary btn-block">Agregar nuevo usuario</button>
         </div>
