--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -1,8 +1,8 @@
-<div id="container">
-    <div id="cliente">
+<div id="container" class="vh-100">
+    <div id="cliente" class="w-100">
         <div id="caja"></div>
-        <div id="title">
-            <h1>Cambiar Contraseña</h1>
+        <div>
+            <h1  id="title" class="text-center mt-5 mb-4" >Cambiar Contraseña</h1>
         </div>
         <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"(ngSubmit)="actualizar(changePassword.value)">
             <div class="row mb-3" id="formulario">
