--- a/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
@@ -1,119 +1,121 @@
 <div id="container">
-    <div id="documentos">
-        <div id="boton-volver">
+    <div id="documentos" class="w-100">
+        <div id="caja"></div>
+        <div id="boton-volver" class="mt-4 ms-4">
             <button class="btn btn-primary btn-block">
                 <img alt="volver" src="assets/volver.png" width="25px">
                 Volver
             </button>
         </div>
-        <div id="seccion-botones">
+        <div id="seccion-botones" class="mt-4 mb-4">
             <div>
                 <input type="text">
                 <img alt="buscador" src="assets/lupa.png" width="25px">
             </div>
-        
+
             <div>
                 <img alt="buscador" src="assets/filtro.png" width="25px">
                 <select aria-label="Todos" id="documentos">
                     <option value="TODOS" selected>Seleccione una opción</option>
-                  </select>
+                </select>
             </div>
-        
+
             <div>
                 <button class="btn btn-primary btn-block">
                     <img alt="agregar" src="assets/agregar.png" width="25px">
                     Agregar Documento
                 </button>
             </div>
-        
+
         </div>
-        
-        <table class="table">
-            <thead>
-              <tr class="titles">
-                <th scope="col">Id</th>
-                <th scope="col">Fecha de Emisión</th>
-                <th scope="col">Hora</th>
-                <th scope="col">Proveedor</th>
-                <th scope="col">Nombre del Documento</th>
-                <th scope="col">Tipo de Documento</th>
-                <th scope="col">Cliente</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Tipo de Creación</th>
-                <th scope="col">Descargar</th>
-              </tr>
-            </thead>
-            <tbody id="tableBody">
-                <tr class="fila">
-                    <td>#Ft00102020</td>
-                    <td>14-06-2021</td>
-                    <td>14:22</td>
-                    <td>Comandato</td>
-                    <td>Compra-lampara-rojo.pdf</td>
-                    <td>Factura</td>
-                    <td>Juan Pedro</td>
-                    <td>Pendiente</td>
-                    <td>Plataforma</td>
-                    <td id="iconos">
-                        <img alt="visualizar" src="assets/vision.png" width="25px">
-                        <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
-                        <img alt="download" src="assets/descargar.png" width="18px">
-                        <img alt="delete" src="assets/eliminar.png" width="18px">
-                    </td>
-        
-                </tr>
-                <tr class="fila">
-                    <td>#Ft00102020</td>
-                    <td>14-06-2021</td>
-                    <td>14:22</td>
-                    <td>Comandato</td>
-                    <td>Compra-lampara-rojo.pdf</td>
-                    <td>Factura</td>
-                    <td>Juan Pedro</td>
-                    <td>Pendiente</td>
-                    <td>Plataforma</td>
-                    <td id="iconos">
-                        <img alt="visualizar" src="assets/vision.png" width="25px">
-                        <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
-                        <img alt="recharge" src="assets/descargar.png" width="18px">
-                        <img alt="recharge" src="assets/eliminar.png" width="18px">
-                    </td>
-                </tr>
-                <tr class="fila">
-                    <td>#Ft00102020</td>
-                    <td>14-06-2021</td>
-                    <td>14:22</td>
-                    <td>Comandato</td>
-                    <td>Compra-lampara-rojo.pdf</td>
-                    <td>Factura</td>
-                    <td>Juan Pedro</td>
-                    <td>Pendiente</td>
-                    <td>Plataforma</td>
-                    <td id="iconos">
-                        <img alt="visualizar" src="assets/vision.png" width="25px">
-                        <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
-                        <img alt="recharge" src="assets/descargar.png" width="18px">
-                        <img alt="recharge" src="assets/eliminar.png" width="18px">
-                    </td>
-                </tr>
-                <tr class="fila">
-                    <td>#Ft00102020</td>
-                    <td>14-06-2021</td>
-                    <td>14:22</td>
-                    <td>Comandato</td>
-                    <td>Compra-lampara-rojo.pdf</td>
-                    <td>Factura</td>
-                    <td>Juan Pedro</td>
-                    <td>Pendiente</td>
-                    <td>Plataforma</td>
-                    <td id="iconos">
-                        <img alt="visualizar" src="assets/vision.png" width="25px">
-                        <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
-                        <img alt="recharge" src="assets/descargar.png" width="18px">
-                        <img alt="recharge" src="assets/eliminar.png" width="18px">
-                    </td>
-                </tr>
-            </tbody>
-          </table>
+        <div>
+            <table class="table">
+                <thead>
+                    <tr class="titles">
+                        <th scope="col">Id</th>
+                        <th scope="col">Fecha de Emisión</th>
+                        <th scope="col">Hora</th>
+                        <th scope="col">Proveedor</th>
+                        <th scope="col">Nombre del Documento</th>
+                        <th scope="col">Tipo de Documento</th>
+                        <th scope="col">Cliente</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Tipo de Creación</th>
+                        <th scope="col">Descargar</th>
+                    </tr>
+                </thead>
+                <tbody id="tableBody">
+                    <tr class="fila">
+                        <td>#Ft00102020</td>
+                        <td>14-06-2021</td>
+                        <td>14:22</td>
+                        <td>Comandato</td>
+                        <td>Compra-lampara-rojo.pdf</td>
+                        <td>Factura</td>
+                        <td>Juan Pedro</td>
+                        <td>Pendiente</td>
+                        <td>Plataforma</td>
+                        <td id="iconos" class="w-100">
+                            <img alt="visualizar" src="assets/vision.png" width="25px">
+                            <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
+                            <img alt="download" src="assets/descargar.png" width="18px">
+                            <img alt="delete" src="assets/eliminar.png" width="18px">
+                        </td>
+
+                    </tr>
+                    <tr class="fila">
+                        <td>#Ft00102020</td>
+                        <td>14-06-2021</td>
+                        <td>14:22</td>
+                        <td>Comandato</td>
+                        <td>Compra-lampara-rojo.pdf</td>
+                        <td>Factura</td>
+                        <td>Juan Pedro</td>
+                        <td>Pendiente</td>
+                        <td>Plataforma</td>
+                        <td id="iconos" class="w-100">
+                            <img alt="visualizar" src="assets/vision.png" width="25px">
+                            <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
+                            <img alt="recharge" src="assets/descargar.png" width="18px">
+                            <img alt="recharge" src="assets/eliminar.png" width="18px">
+                        </td>
+                    </tr>
+                    <tr class="fila">
+                        <td>#Ft00102020</td>
+                        <td>14-06-2021</td>
+                        <td>14:22</td>
+                        <td>Comandato</td>
+                        <td>Compra-lampara-rojo.pdf</td>
+                        <td>Factura</td>
+                        <td>Juan Pedro</td>
+                        <td>Pendiente</td>
+                        <td>Plataforma</td>
+                        <td id="iconos" class="w-100">
+                            <img alt="visualizar" src="assets/vision.png" width="25px">
+                            <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
+                            <img alt="recharge" src="assets/descargar.png" width="18px">
+                            <img alt="recharge" src="assets/eliminar.png" width="18px">
+                        </td>
+                    </tr>
+                    <tr class="fila">
+                        <td>#Ft00102020</td>
+                        <td>14-06-2021</td>
+                        <td>14:22</td>
+                        <td>Comandato</td>
+                        <td>Compra-lampara-rojo.pdf</td>
+                        <td>Factura</td>
+                        <td>Juan Pedro</td>
+                        <td>Pendiente</td>
+                        <td>Plataforma</td>
+                        <td id="iconos" class="w-100">
+                            <img alt="visualizar" src="assets/vision.png" width="25px">
+                            <img alt="recharge" src="assets/cargando-flechas.png" width="18px">
+                            <img alt="recharge" src="assets/descargar.png" width="18px">
+                            <img alt="recharge" src="assets/eliminar.png" width="18px">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
