--- a/frontend/Proyecto/src/app/componentes/empresa/profile-user/profile-user.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/profile-user/profile-user.component.html
@@ -1,4 +1,4 @@
-<div id="container">
+<div id="container" class="vh-100">
     <div id="perfil">
         <div id="caja"></div>
         <div id="title">
