--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.css
@@ -10,3 +10,14 @@ div[class="row justify-content-center"]{
     color:red;
     font-size: 12px;
 }
+
+#loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: no-repeat rgb(249,249,249);
+    opacity: .8;
+}
