--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
@@ -4,56 +4,71 @@
         <div>
             <h1 id="title" class="text-center mt-5 mb-4">Perfil</h1>
         </div>
-        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]='profile'>
+        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]='profile' (ngSubmit)="actualizarInfo(profile.value)">
             <div class="row mb-3" id="formulario">
-                <div id="campos">
-                    <div class="col-md-5 mt-5 mb-4 w-50">
-                        <div class="form-floating">
-                            <input class="form-control" id="inputnombre" name="nombre" type="text"
-                                placeholder="Ingrese su nombre" formControlName="first_name">
-                            <label for="inputnombre">Nombres</label>
-                            <span class="lead error"
-                                *ngIf="(formRef.submitted && profile.get('first_name')?.hasError('required')) || profile.get('first_name')?.hasError('pattern') || profile.get('first_name')?.hasError('minlength') || profile.get('first_name')?.hasError('maxlength')">Ingrese
-                                un nombre válido
-                            </span>
-                        </div>
-                    </div>
 
-                    <div class="col-md-5 mb-4 w-50">
-                        <div class="form-floating">
-                            <input class="form-control" id="inputapellido" name="apellido" type="text"
-                                placeholder="Ingrese su apellido" formControlName="last_name">
-                            <label for="inputapellido">Apellidos</label>
-                            <span class="lead error"
-                                *ngIf="(formRef.submitted && profile.get('last_name')?.hasError('required')) || profile.get('last_name')?.hasError('pattern') || profile.get('last_name')?.hasError('minlength') || profile.get('last_name')?.hasError('maxlength')">Ingrese
-                                un nombre válido
-                            </span>
-                        </div>
-                    </div>
+                <div id="campos" class="pt-3">
 
-
-                    <div>
+                    <div >
                         <p>Selecciona un tipo:</p>
-                        <input #inputRUC (input)="prueba(inputRUC)" type="radio" id="RUC" name="tipo" value="RUC"
-                            checked>
+                        <input #inputRUC (input)="changeTipo(inputRUC.value)" type="radio" id="RUC" name="tipo" value="RUC"
+                            checked disabled>
                         <label class="me-4" for="RUC">RUC</label>
-
-                        <input #inputCedula (input)="prueba(inputCedula)" type="radio" id="CEDULA" name="tipo"
-                            value="CEDULA">
+    
+                        <input #inputCedula (input)="changeTipo(inputCedula.value)" type="radio" id="CEDULA" name="tipo"
+                            value="CEDULA" disabled>
                         <label for="CEDULA">CEDULA</label>
                     </div>
-
-                    <div class="col-md-5 mb-4 w-50">
+    
+                    <div class="col-md-5 mb-3 w-50">
                         <div class="form-floating">
-                            <input class="form-control" maxlength="13" id="inputTipo" type="text" formControlName="tipo">
+                            <input class="form-control" maxlength="13" id="n_identificacion" type="text" formControlName="n_identificacion" readonly>
                             <label id="tipo" for="inputTipo">{{tipo}}</label>
                             <span class="lead error"
-                                *ngIf="(formRef.submitted && profile.get('tipo')?.hasError('required'))|| profile.get('tipo')?.hasError('pattern') || validarRucCedula()">Ingrese
+                                *ngIf="(formRef.submitted && profile.get('n_identificacion')?.hasError('required'))|| profile.get('n_identificacion')?.hasError('pattern') || validarRucCedula()">Ingrese
                                 {{tipo}} válido</span>
                         </div>
                     </div>
 
-                    <div class="col-md-5 mb-4 w-50">
+                    <div class="w-50" formGroupName="user">
+                        <div class="col-md-5 mb-3 w-100">
+                            <div class="form-floating">
+                                <input class="form-control" id="inputnombre" name="nombre" type="text"
+                                    placeholder="Ingrese su nombre" formControlName="first_name" readonly>
+                                <label for="inputnombre">Nombres</label>
+                                <span class="lead error"
+                                    *ngIf="(formRef.submitted && profile.get('user.first_name')?.hasError('required')) || profile.get('user.first_name')?.hasError('pattern') || profile.get('user.first_name')?.hasError('minlength') || profile.get('user.first_name')?.hasError('maxlength')">Ingrese
+                                    un nombre válido
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-5 mb-3 w-100">
+                            <div class="form-floating">
+                                <input class="form-control" id="inputapellido" name="apellido" type="text"
+                                    placeholder="Ingrese su apellido" formControlName="last_name" readonly>
+                                <label for="inputapellido">Apellidos</label>
+                                <span class="lead error"
+                                    *ngIf="(formRef.submitted && profile.get('user.last_name')?.hasError('required')) || profile.get('user.last_name')?.hasError('pattern') || profile.get('user.last_name')?.hasError('minlength') || profile.get('user.last_name')?.hasError('maxlength')">Ingrese
+                                    un nombre válido
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-5 mb-3 w-100">
+                            <div class="form-floating">
+                                <input class="form-control" id="inputEmail" name="mailorganizacion" type="email"
+                                    placeholder="name@example.com" formControlName='email'>
+                                <label for="inputEmail">Correo Electrónico</label>
+                                <span class="lead error"
+                                    *ngIf="(formRef.submitted && profile.get('user.email')?.hasError('required')) || profile.get('user.email')?.hasError('minlength') ||  profile.get('user.email')?.hasError('pattern')">Ingrese
+                                    email válido</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-5 mb-3 w-50">
                         <div class="form-floating">
                             <input class="form-control" id="inputDireccion" name="direccion" type="text"
                                 placeholder="Ingrese su dirección" formControlName='direccion'>
@@ -61,18 +76,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-5 mb-4 w-50">
-                        <div class="form-floating">
-                            <input class="form-control" id="inputEmail" name="mailorganizacion" type="email"
-                                placeholder="name@example.com" formControlName='email'>
-                            <label for="inputEmail">Correo Electrónico</label>
-                            <span class="lead error"
-                                *ngIf="(formRef.submitted && profile.get('email')?.hasError('required')) || profile.get('email')?.hasError('minlength') ||  profile.get('email')?.hasError('pattern')">Ingrese
-                                email válido</span>
-                        </div>
-                    </div>
-
-                    <div class="col-md-5 mb-4 w-50">
+                    <div class="col-md-5 mb-3 w-50">
                         <div class="form-floating">
                             <input #telf class="form-control" id="inputNumphone" name="telefono" type="text"
                                 placeholder="Ingrese su numero de telefono" (input)="validate.validarCampNum(telf,10)"
@@ -84,8 +88,8 @@
                         </div>
                     </div>
 
-                    <div class="col-md-5 mb-5 w-50 text-center">
-                        <input value="Actualizar" [disabled]="formRef.control.invalid"
+                    <div class="col-md-5 mb-3 w-50 text-center">
+                        <input type="submit" value="Actualizar" [disabled]="formRef.control.invalid || validarRucCedula()"
                             class="btn btn-primary btn-block w-75">
                     </div>
                 </div>
