--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
@@ -24,10 +24,10 @@
                                                     <input #rucInput class="form-control" id="inputRUC"
                                                         (input)="validate.validarCampNum(rucInput,13)" name="ruc"
                                                         type="text" placeholder="Ingrese el RUC de su empresa"
-                                                        formControlName="ruc">
+                                                        formControlName="ruc" maxlength="13">
                                                     <label for="inputRUC">RUC</label>
                                                     <span class="lead error"
-                                                        *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength') || createAccount.get('empresa.ruc')?.hasError('maxlength') || createAccount.get('empresa.ruc')?.hasError('pattern') || validarRuc()">Ingrese
+                                                        *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength')  || createAccount.get('empresa.ruc')?.hasError('pattern') || validarRuc()">Ingrese
                                                         RUC válido</span>
                                                     <!-- <div class={{ruc_d}} style='color:red'>{{ruc_content}}</div> -->
 
@@ -86,8 +86,35 @@
                                             </div>
 
                                         </div>
-                                        <div class="row" formGroupName="user">
+                                        <div class="row">
                                             <p id="contacto" class="subtitle-form">Contacto</p>
+                                            <div class="col-md-6 mb-3">
+                                                <div class="form-floating mb-3 mb-md-0">
+                                                    <input #cedulaInput class="form-control" id="inputCEDULA"
+                                                        (input)="validate.validarCampNum(cedulaInput,10)" name="n_identificacion"
+                                                        type="text" placeholder="Ingrese su número de cédula"
+                                                        formControlName="n_identificacion" maxlength="10">
+                                                    <label for="inputCEDULA">CÉDULA</label>
+                                                    <span class="lead error"
+                                                        *ngIf="(formRef.submitted && createAccount.get('n_identificacion')?.hasError('required')) || createAccount.get('n_identificacion')?.hasError('minlength')  || createAccount.get('n_identificacion')?.hasError('pattern') || !validate.validarRuc(cedulaInput.value,10)">
+                                                        Ingrese un número de cédula válido</span>
+                                                    <!-- <div class={{ruc_d}} style='color:red'>{{ruc_content}}</div> -->
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-6 mb-3">
+                                                <div class="form-floating">
+                                                    <input class="form-control" id="inputCodigo" name="codigodireccion"
+                                                        type="password" placeholder="código de verificación"
+                                                        formControlName="token">
+                                                    <label for="inputDireccionUser">Código de verificación</label>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                        
+                                        <div class="row" formGroupName="user">
+
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputNames" name="nombre"
@@ -158,18 +185,9 @@
                                                 </div>
                                             </div>
 
-
-                                            <div class="col-md-6 mb-3">
-                                                <div class="form-floating">
-                                                    <input class="form-control" id="inputCodigo" name="codigodireccion"
-                                                        type="password" placeholder="código de verificación"
-                                                        formControlName="token">
-                                                    <label for="inputDireccionUser">Código de verificación</label>
-                                                </div>
-                                            </div>
-
                                         </div>
                                         <div class="row mb-3">
+
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputCargo" name="cargo" type="text"
@@ -212,7 +230,7 @@
                                         <div class="mt-4 mb-4">
                                             <div class="d-grid">
                                                 <input id="submit_create_cuenta" type="submit" value="Siguiente"
-                                                    [disabled]="formRef.invalid || validacionPassword()" class="btn btn-primary btn-block">
+                                                    [disabled]="formRef.invalid || validacionPassword() || !validate.validarRuc(cedulaInput.value,10) || !validate.validarRuc(rucInput.value)" class="btn btn-primary btn-block">
                                             </div>
                                         </div>
                                         <div *ngIf="loanding" id="loader" class="w-100">
