Pantalla de carga de componentes de cambio de contraseña

--- a/frontend/Proyecto/src/app/componentes/sitioAdmin/empresa-temp/empresa-temp.component.html
+++ b/frontend/Proyecto/src/app/componentes/sitioAdmin/empresa-temp/empresa-temp.component.html
@@ -8,8 +8,11 @@
                     <tr>
 
                         <th>Razon Social</th>
+                        <th>Nombres</th>
+                        <th>Cargo</th>
                         <th>Teléfono</th>
                         <th>Correo</th>
+                        <th>Mensaje</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
