--- a/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
@@ -21,7 +21,7 @@
             </div>
 
             <div>
-                <button class="btn btn-primary btn-block">
+                <button class="btn btn-primary btn-block" type="file">
                     <img alt="agregar" src="assets/agregar.png" width="25px">
                     Agregar Documento
                 </button>
