--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
@@ -21,6 +21,10 @@
                                             <a class="small" href="home">Regresar al login</a>
                                             <a class="btn btn-primary" (click) = "restablecer(email.value)">Reestablecer contraseña</a>
                                         </div>
+                                        <div *ngIf="loanding" id="loader" class="w-100">
+                                            <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color" [mode]="mode">
+                                            </mat-progress-spinner>
+                                        </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
